--- a/bizz/pom.xml
+++ b/bizz/pom.xml
@@ -51,12 +51,12 @@
       <artifactId>flyway-core</artifactId>
       <version>8.2.0</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-tomcat</artifactId>-->
-<!--      <version>2.6.3</version>-->
-<!--      <scope>provided</scope>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <version>2.6.3</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
